Minor fix css overflow

--- a/app/assets/stylesheets/components/event-form.scss
+++ b/app/assets/stylesheets/components/event-form.scss
@@ -1,5 +1,6 @@
 .new-event-container {
   position: relative;
+  overflow-x: hidden;
 }
 
 .new-event-title {
