--- a/app/assets/stylesheets/components/page.scss
+++ b/app/assets/stylesheets/components/page.scss
@@ -29,7 +29,6 @@ html, body, .page, main {
   max-width: 1170px;
   width: 100vw;
   border-left: 1px solid #ccc;
-  overflow-x: hidden;
   border-right: 1px solid #ccc;
   background: white;
   flex-grow: 1;
@@ -44,6 +43,8 @@ ul {
   height: 50px;
   color: white;
   font-size: 20px;
+  max-width: 1170px;
+  margin: auto;
 }
 
 .footer .col-lg-12 .col-md-8 a {
